docs/passwordsecure/9.3/installation/installationwebapplication/installation_web_application.md
---
title: "Installation Web Application"
description: "Installation Web Application"
sidebar_position: 40
---

# Installation Web Application

**CAUTION:** This guide focuses on the initial installation of the Web Application and is not
relevant for further updates.

## Preparations for installation

### System requirements

Please ensured that all [Webserver](/docs/passwordsecure/9.3/installation/requirements/webserver/webserver.md) requirements have been met.

### SSL certificate

When the web service is started, the certificate created in the basic configuration is configured
and connected to port 11016. This is the connection certificate for communication between the web
server and the Netwrix Password Secure server.

### Databases

All databases that are to be used on the Web Application must be enabled for this purpose. With a
double click on the corresponding database the option "Access via Web Application" can be activated.

## Installation

The Web Application is generated by the Server Manager and made available in a ZIP archive.
Depending on the web server, the ZIP archive is created accordingly. The installation also differs
depending on the web server used. Irrespective of the web server used, the following information
firstly needs to be entered:

### Destination

Name the folder where the ZIP archive with the Web Application should be placed.

**CAUTION:** Do not use the Server Manager installation directory

NOTE: If the web server is created on IIS, execute config.bat to handle integration of the web
server.

### Server IP

Please check if the IP address is correct otherwise no connection to the Web Application can be
established. If the IP address is wrong, you have to change it in the basic configuration of the
Server Manager.

### Web server host address

Enter the IP address or the host name of the web server.

### Port

Enter the port that is used to communicate with the Web Application.

All of the subsequent steps or the required tasks will be explained in the associated chapters for
each specific web server.

## Custom Branding

You can personalize the Web App with your company’s branding by navigating to `Custom branding`. There, upload your logo files and specify the custom text you want to display; the updated branding will appear across the application once saved.

![Custom branding configuration](/images/passwordsecure/9.3/installation/installation_web_application/configure_custom_branding.webp)

## CORS configuration

A button for the so-called CORS configuration can be found on the ribbon. It is essential that this
configuration is carried out before the Web Application can be used. A list of the permitted CORS
domains will be saved as a result. Requests received via the Web Application can then be checked
against this list. The request will only be successfully carried out if the origin header for a
request is available in the permitted domains.

In order to add a domain, simply enter it at the bottom of the dialogue. Clicking on
:material-plus-circle-outline: will add the entry to the list at the top.

![cors-en-new](/images/passwordsecure/9.2/installation/installation_web_application/cors-en-new.webp)

NOTE: In general, it is sufficient to add the IP address which was also saved as the Web server host
address.

## Calling up the Web Application

The process for calling up the Web Application is dependent on the configuration of the web server:

- Web Application in root directory -> `https://hostname`
- Web Application in a subdirectory -> `https://hostname/path-to-subdirectory`
- Port is not set to 443 -> `https://hostname:port/path-to-subdirectory`

NOTE: In order for the redirect to be used, it is important to ensure on apache and nginx web
servers that no other host listens to port 80.
